Move non-content docs/ops out of v0.6.0 to PR #206
Keep v0.6.0 a clean content release. Moved to #206 (off main): the
public-launch pivot (CLAUDE.md intro + DESIGN.md), the RAM/GC guidance
(PRISM-SETUP.md), and the JVM single-source refactor (scripts/instance-jvm.cfg
+ build-prism-skeleton.sh + the editor builder) — reverted here to main's
state. The content-explaining docs stay: CLAUDE.md keeps the Sodium/Aeronautics
gotcha, SPAWN-GATING keeps the mob-throttle write-up, and the patch notes stay.
Disjoint file sets from #206, so they merge to main independently.